<resources>
    <string name="app_name">Hotel buying and ranking app</string>
    <string name="top_collection">Top Collection</string>
    <string name="near_me">Near me</string>
    <string name="low_to_high">Low to high price</string>
    <string name="type_your_location">Type your location address</string>
    <string name="cash">$12,000</string>
    <string name="location_name">West minister, London</string>
    <string name="lbl_area">3200 sqft</string>
    <string name="lbl_bedrooms">4 bedrooms</string>
    <string name="lbl_reviews">23 reviews</string>
    <string name="lbl_favourite">324 Favourite</string>
    <string name="lbl_see_review">See Review</string>
    <string name="lbl_see_photo">See Photos</string>
    <string name="btn_add_favourite">Add Favourite</string>
    <string name="btn_book_now">Book Now</string>
    <string name="lbl_hotel_title">Single Family House</string>

    <string name="body_text">Makayla Lewis sketched these notes while watching Amanda Palmer’s TED Talk online.

At TED 2011, Sunni Brown encouraged doodling everywhere – classrooms and meeting rooms included. “The doodle … engages all four learning modalities simultaneously, with the possibility of an emotional experience,” she says in her classic talk. [ted_talkteaser id =1230]Yes, it’s proven that doodling helps you remember things more efficiently.

Graphic notetaking is the doodle, evolved and tamed. So it is no surprise that the many creative people and visual learners who attend TED conferences and locally organized TEDx events choose this method for capturing information.

What does a graphic notetaker do? They must majorly multitask: they listen to a talk, synthesizing everything a speaker is saying, breaking down everything into phrases and drawings, linking ideas and statements, and adding aesthetic details and colors. All of this is done in real time, with little to no briefing beforehand. It requires more than a good eye or artistic talent; you need an excellent ear practiced in active listening. An arsenal of visual vocabulary doesn’t hurt, either.

We’ve scoped out the wildest graphic notes floating around the TED ecosystem and culled great tips for graphic notetaking, from the masters themselves:

Gavin Blake of Australian graphic facilitation agency Fever Picture set up a huge whiteboards at TEDActive 2013, where he drew notes depicting the essence of each talk at the conference. His key pieces of advice: Be as present as possible, keep the current of visualizing and iterating going, and don’t worry about things falling through the cracks.
    Makayla Lewis sketched these notes while watching Amanda Palmer’s TED Talk online.

At TED 2011, Sunni Brown encouraged doodling everywhere – classrooms and meeting rooms included. “The doodle … engages all four learning modalities simultaneously, with the possibility of an emotional experience,” she says in her classic talk. [ted_talkteaser id =1230]Yes, it’s proven that doodling helps you remember things more efficiently.

Graphic notetaking is the doodle, evolved and tamed. So it is no surprise that the many creative people and visual learners who attend TED conferences and locally organized TEDx events choose this method for capturing information.

What does a graphic notetaker do? They must majorly multitask: they listen to a talk, synthesizing everything a speaker is saying, breaking down everything into phrases and drawings, linking ideas and statements, and adding aesthetic details and colors. All of this is done in real time, with little to no briefing beforehand. It requires more than a good eye or artistic talent; you need an excellent ear practiced in active listening. An arsenal of visual vocabulary doesn’t hurt, either.

We’ve scoped out the wildest graphic notes floating around the TED ecosystem and culled great tips for graphic notetaking, from the masters themselves:

Gavin Blake of Australian graphic facilitation agency Fever Picture set up a huge whiteboards at TEDActive 2013, where he drew notes depicting the essence of each talk at the conference. His key pieces of advice: Be as present as possible, keep the current of visualizing and iterating going, and don’t worry about things falling through the cracks.
    Makayla Lewis sketched these notes while watching Amanda Palmer’s TED Talk online.

At TED 2011, Sunni Brown encouraged doodling everywhere – classrooms and meeting rooms included. “The doodle … engages all four learning modalities simultaneously, with the possibility of an emotional experience,” she says in her classic talk. [ted_talkteaser id =1230]Yes, it’s proven that doodling helps you remember things more efficiently.

Graphic notetaking is the doodle, evolved and tamed. So it is no surprise that the many creative people and visual learners who attend TED conferences and locally organized TEDx events choose this method for capturing information.

What does a graphic notetaker do? They must majorly multitask: they listen to a talk, synthesizing everything a speaker is saying, breaking down everything into phrases and drawings, linking ideas and statements, and adding aesthetic details and colors. All of this is done in real time, with little to no briefing beforehand. It requires more than a good eye or artistic talent; you need an excellent ear practiced in active listening. An arsenal of visual vocabulary doesn’t hurt, either.

We’ve scoped out the wildest graphic notes floating around the TED ecosystem and culled great tips for graphic notetaking, from the masters themselves:

Gavin Blake of Australian graphic facilitation agency Fever Picture set up a huge whiteboards at TEDActive 2013, where he drew notes depicting the essence of each talk at the conference. His key pieces of advice: Be as present as possible, keep the current of visualizing and iterating going, and don’t worry about things falling through the cracks.</string>
</resources>
