<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMainBackground"
        android:padding="@dimen/inner_margin">
        <android.support.v7.widget.CardView
            android:layout_margin="@dimen/card_corner_radius"
            app:cardCornerRadius="@dimen/card_corner_radius"
            android:background="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:background="@color/white"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:padding="@dimen/icon_size_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:gravity="center_vertical"
                        android:text="@string/cash"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <android.support.design.widget.FloatingActionButton
                        android:src="@drawable/ic_near_me"
                        app:fabSize="mini"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <LinearLayout
                    android:padding="@dimen/filter_corner_radius"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/ic_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textColor="@color/black"
                        android:layout_marginLeft="@dimen/card_corner_radius"
                        android:text="@string/location_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:weightSum="2"
                    android:padding="@dimen/filter_corner_radius"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:src="@drawable/ic_open_with_black_24dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:textColor="@color/black"
                            android:layout_marginLeft="@dimen/card_corner_radius"
                            android:text="@string/lbl_area"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginLeft="@dimen/icon_size_normal"
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:src="@drawable/ic_local_hotel_black_24dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:textColor="@color/black"
                            android:layout_marginLeft="@dimen/card_corner_radius"
                            android:text="@string/lbl_bedrooms"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:padding="@dimen/filter_corner_radius"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:src="@drawable/ic_favorite_border_black_24dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:textColor="@color/black"
                            android:layout_marginLeft="@dimen/card_corner_radius"
                            android:text="@string/lbl_favourite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginLeft="@dimen/icon_size_normal"
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:src="@drawable/ic_border_color_black_24dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:textColor="@color/black"
                            android:layout_marginLeft="@dimen/card_corner_radius"
                            android:text="@string/lbl_reviews"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_marginTop="@dimen/card_corner_radius"
                    android:layout_marginBottom="@dimen/card_corner_radius"
                    android:background="@color/textColorSecondary"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

                <RelativeLayout
                    android:padding="@dimen/filter_corner_radius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_alignParentLeft="true"
                        android:layout_margin="@dimen/card_corner_radius"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@string/lbl_see_review"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_alignParentRight="true"
                        android:padding="@dimen/card_corner_radius"
                        android:background="@drawable/button_border"
                        android:textColor="@color/blue"
                        android:text="@string/lbl_see_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:text="@string/lbl_hotel_title"
            android:textStyle="bold"
            android:padding="@dimen/icon_size_small"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="@dimen/icon_size_small"
            android:text="@string/body_text"
            android:lineSpacingExtra="@dimen/filter_padding"
            android:padding="@dimen/card_corner_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
