<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            android:fitsSystemWindows="true">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/hotel_card_view_height"
                android:scaleType="centerCrop"
                android:src="@drawable/hotel_view_4"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" >

                <LinearLayout
                    android:weightSum="10"
                    android:id="@+id/app_bar"
                    android:layout_alignParentTop="true"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_bar_height"
                    android:orientation="horizontal"
                    android:gravity="left">

                    <ImageView
                        android:id="@+id/img_back"
                        android:layout_weight="1"
                        android:src="@drawable/ic_chevron_left_black_24dp"
                        android:layout_width="0dp"
                        android:layout_height="match_parent" />

                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="8"
                        android:orientation="horizontal"
                        android:layout_alignParentLeft="true"
                        android:id="@+id/ll_search"
                        android:layout_marginLeft="@dimen/card_corner_radius"
                        android:background="@drawable/location_shape_background"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:src="@drawable/ic_search_black_24dp"
                            android:layout_marginRight="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <EditText
                            android:focusedByDefault="false"
                            android:background="@android:color/transparent"
                            android:paddingTop="@dimen/card_corner_radius"
                            android:paddingBottom="@dimen/card_corner_radius"
                            android:hint="@string/type_your_location"
                            android:textColorHint="@color/black"
                            android:textSize="15sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <include layout="@layout/content_scrolling_layout"/>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="@dimen/icon_size_small"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.button.MaterialButton
            android:text="@string/btn_add_favourite"
            android:background="@drawable/button_border"
            android:backgroundTint="@color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/btn_text_size"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
        <android.support.design.button.MaterialButton
            android:background="@drawable/button_border"
            android:textAllCaps="false"
            android:textSize="@dimen/btn_text_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            android:text="@string/btn_book_now"
            android:layout_marginLeft="@dimen/filter_corner_radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>




